--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Akoya Spa Bali
+Theme Name: Akoya Spa Bali - git
 Author: Reva Athallah Rizky
 Description: Theme created for akoya
 Version: 0.0.1
