--- a/css/global.css
+++ b/css/global.css
@@ -319,3 +319,18 @@ a {
         display: none!important;
     }
 }
+
+.float-btn-wrapper {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 9;
+}
+
+.float-btn-wrapper .booknow-btn {
+    margin-bottom: 10px;
+}
+.float-btn-wrapper .whatsapp-btn {
+    display: flex;
+    justify-content: center;
+}
